--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 
 	<body>
 		<h1>Bienvenidos al sitio oficial de Atur Games</h1>
+		
+		<p>Quedate y vive una gran experiencia...</p>
 	</body>
 </html>
