--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 		<h1>Bienvenidos al sitio oficial de Atur Games</h1>
 		
 		<p>Quedate y vive una gran experiencia...</p>
+		
+		<span>Sition en construcción</span>
 	</body>
 </html>
