--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Atur Games</title>
 		<style>
 			body{
-				background-color: cyan;
+				background-color: red;
 			}
 		</style>
 	</head>
