Sition was updated by Sitio

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 		
 		<p>Quedate y vive una gran experiencia...</p>
 		
-		<span>Sition en construcción</span>
+		<span>Sitio en construcción</span>
 	</body>
 </html>
