New line was added

--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
 		<p>Quedate y vive una gran experiencia...</p>
 		
 		<span>Sitio en construcción</span>
+
+        <p>Vuelba pronto</p>
 	</body>
 </html>
