Background color was updated

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>Atur Games</title>
 		<style>
 			body{
-				background-color: green;
+				background-color: red;
 			}
 		</style>
 	</head>
